added the ability to view the proposed new filesystem once letta is done with the organization tool (it should pop up on the side where the regular file system is shown)

--- a/UI/templates/ui.html
+++ b/UI/templates/ui.html
@@ -26,6 +26,8 @@
             <button id="directory-go">Go</button>
         </div>
 
+        <div id="new-filesys-msg"></div>
+
         <ul id="tree">Loading...</ul>
 
         <script src="{{ url_for('static', filename='js/filetree.js') }}"></script>
